# lisp-interpreter-haskell

./: README.md
docs/: README.md  report.md
examples/: e.k  loop.k
src/: ki.cabal
src/src/: ki.hs
src/src/Klang/: Compile.hs  Config.hs  Lambda.hs  Ops.hs  Parse.hs  Type.hs
src/test/: KiSpec.hs
src/test/Klang/: CompileSpec.hs  LambdaSpec.hs  ParseSpec.hs
